# hello_cli

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  prep_dist.sh  run.sh
.github/workflows/: cli.yml  test.yml
docker/: Dockerfile.alpine  Dockerfile.debian  NOTES.md
docker/hooks/: build
examples/client/cli/python/: subprocess_call.py
examples/client/ffi/ruby/: fiddle.rb
src/: cli.rs  lib.rs  main.rs  test.rs
src/cli/pact_mock_server_cli/: main.rs
src/cli/pact_mock_server_cli/main/: create_mock.rs  list.rs  server.rs  shutdown.rs  verify.rs
src/cli/pact_stub_server_cli/: main.rs
src/cli/pact_stub_server_cli/main/: loading.rs  server.rs
src/cli/pact_verifier_cli/: main.rs  mod.rs
src/cli/pact_verifier_cli/main/: args.rs
src/pact_broker/: list_latest_pact_versions.rs  mod.rs  utils.rs
src/pact_plugin_cli/: main.rs  mod.rs
src/pact_plugin_cli/main/: install.rs  list.rs  repository.rs
src/verification/: mod.rs
