[package]
name = "pact_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.40"
async-trait = "0.1.74"
base64 = "0.21.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.5.2", features = ["derive", "env", "cargo"] }
clap_complete = { version = "4.5.1", features = [] }
comfy-table = "7.1.0"
env_logger = "0.11.2"
futures = { version = "0.3.29", features = [] }
glob = "0.3.0"
home = "0.5.5"
http = "0.2.9"
hyper = "0.14.28"
itertools = "0.12.0"
junit-report = { version = "0.8.3", optional = true }
lazy_static = "1.4.0"
log = "0.4.14"
maplit = "1.0.2"
mime = "0.3.17"
pact_matching = { version = "~1.1.10" }
pact_mock_server = { version = "~1.2.4", default-features = false }
pact_models = { version = "~1.1.18" }
pact-plugin-driver = { version = "~0.5.2", git = "https://github.com/you54f/pact-plugins.git" }
pact_verifier = "~1.0.0"
rand = "0.8.5"
regex = "1.10.2"
requestty = "0.5.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.23"
simplelog = "0.12.1"
tabled = "0.15.0"
thiserror = "1.0.51"
time = "0.3.31"
tokio = { version = "1.35.1", features = [] }
toml = "0.8.8"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tower-service = { version = "0.3.2" }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-core = "0.1.32"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.16"
url = "2.5.0"
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["v4"] }
webmachine-rust = "0.3.0"


[dependencies.reqwest]
version = "0.11.23"
default-features = false
features = ["rustls-tls-native-roots", "blocking", "json", "stream"]

[dependencies.serde_with]
version = "3.4.0"
features = ["json"]

# [build-dependencies]
# clap = {version = "4.5.2", features = ["derive", "env"]}
# clap_complete = "4.5.1"

[dev-dependencies]
env_logger = "0.10.1"
expectest = "0.12.0"
pretty_assertions = "1.3.0"
quickcheck = "1"
rand = "0.8.5"
tempfile = "3.8.1"
test-log = "0.2.14"
trycmd = "0.15.0"


[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
codegen-units = 1
panic = "abort"

[profile.release-aarch64-freebsd]
inherits = "release"
panic = "unwind"
# if panic abort is set for aarch64 freebsd, it fails in cross
# https://github.com/cross-rs/cross/issues/1363#issuecomment-1783917450
